manifests/istio/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio-injection : enabled
